# Cryvex

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  parse.rs  proto.pest  template.rs  utils.rs
templates/: component.hpp.template  mock_component.cpp.template  test_component.cpp.template
templates/component/: client.cpp.template  client.hpp.template  component.cpp.template  component.hpp.template  server.cpp.template  server.hpp.template
templates/test/: mock_component.cpp.template  mock_component.hpp.template  test_component.cpp.template
