[package]
name = "cryvex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
lazy_static = "1.4.0"
pest = { version = "2.5.7", features = ["pretty-print", "serde"] }
pest_derive = "2.5.7"
serde = "1.0.160"
tera = "1.18.1"
tera-text-filters = "1.0.0"
