[package]
name = "cryvex"
version = "0.1.0"
edition = "2021"
about = "c++ component wrapper boilerplate generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
convert_case = "0.6.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
pest = { version = "2.5.7", features = ["pretty-print", "serde"] }
pest_derive = "2.5.7"
serde = { version = "1.0.160", features = ["derive"] }
tera = "1.18.1"
tera-text-filters = "1.0.0"
